# drsa

./: .gitignore  README.md  guide.md  index.html  package-lock.json  package.json  requirements.txt  run.sh  setup_grammars.py  vite.config.ts
docker/searxng/: docker-compose.yml  settings.yml
src/: App.tsx  index.css  main_tui.py  main_tui_ptg.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/rust/brain/: agent_integration.rs  llm_execution.rs  rag_contextual.rs
src-tauri/src/rust/core/: app_shell.rs  public_scaling.rs
src-tauri/src/rust/studio/: artifact_generation.rs  audio_summaries.rs
src-tauri/src/rust/vault/: github_arch.rs  ingestion_handler.rs
src/features/brain/: agentic_reasoning.py  hallucination_guard.py  orchestrator.py
src/features/github/: analyzer.py
src/features/research/: scraper.py  visualizer.py
src/features/studio/: knowledge_graph.py
src/features/vault/: multi_modal_ingestion.py  parser.py  web_scraping.py
src/python/: requirements.txt
src/python/brain/: agentic_reasoning.py  hallucination_guard.py
src/python/studio/: knowledge_graph.py
src/python/vault/: multi_modal_ingestion.py  web_scraping.py
src/solid/brain/: AgentThinkingDropdown.css  AgentThinkingDropdown.tsx  ChatWindow.css  ChatWindow.tsx  CitationViewer.css  CitationViewer.tsx
src/solid/core/: AppShell.css  AppShell.tsx  Router.tsx
src/solid/guide/: GuidePage.css  GuidePage.tsx
src/solid/studio/: KnowledgeGraphView.tsx  (+3 more)
src/ui/: app.py  mode_1.py  mode_2.py  mode_3.py
(+11 files in other folders)
