[package]
name = "drsa"
version = "0.1.0"
description = "DRSA – Definitive Research & Studio Assistant"
authors = ["DRSA Team"]
edition = "2021"

[lib]
name = "drsa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
tokio           = { version = "1", features = ["full"] }
reqwest         = { version = "0.12", features = ["json"] }
pyo3            = { version = "0.22", features = ["auto-initialize", "abi3-py310"] }
lancedb         = "0.14"
arrow-array     = "52"
urlencoding     = "2.1.3"

# Sub-modules
